# TA_Time_Series_Methods

./: .gitignore  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt
.agents/: .commit_and_push  TASKS.md  TODOs.md
TeX/data_downlaod_guide/: main.fdb_latexmk  main.fls  main.tex
TeX/data_instalation_guide/: Makefile  README.md  main.tex
TeX/example/: main.fdb_latexmk  main.fls  main.tex
TeX/installation_guide/: Makefile  README.md  main.fdb_latexmk  main.fls  main.tex
data/processed/: bonds_monthly.dta  esp_cpi_monthly.dta  esp_credit_quarterly.dta  esp_gdp_quarterly.dta  ibex35_daily.dta  ibex35_monthly.dta  us_unemployment_monthly.dta  vix_daily.dta
data/raw/: BOND_10Y_DE.csv  BOND_10Y_ES.csv  BOND_10Y_FR.csv  BOND_10Y_GR.csv  BOND_10Y_IE.csv  BOND_10Y_IT.csv  BOND_10Y_PT.csv  CAC40.csv  DAX.csv  DEXUSEU.csv  DGS2.csv  DGS30.csv  DGS5.csv  ESP_CPI.csv  ESP_CREDIT.csv  ESP_GDI.csv  ESP_GDP.csv  ESP_UNEMP.csv  FTSEMIB.csv  IBEX35.csv  SP500.csv  TXUR.csv  VIXCLS.csv
delete/: DATA_UPDATE_SUMMARY.md  DISCREPANCY_REPORT.md  DOWNLOAD_METADATA.md  EXECUTION_SUMMARY.md
delete/DONT_READ/: DATA_FILES_NEEDED.md  DOWNLOAD_SUMMARY.txt  data_exploration.ipynb  data_sources.md
docs/: COMMIT_QUICK_REFERENCE.md  GIT_COMMIT_GUIDE.md  TASK4_IMPLEMENTATION.md
dofiles/: empirical_applications.do
instructions/: empirical_applications.md  metadata.md
references/: common_pitfalls.md  stata_cheatsheet.md
scripts/: README.md  git_commit_helper.sh  install_git_hooks.sh
sessions/: README.md  notebook_styles.css  simulations.ipynb  var_results.irf
(+70 files in other folders)
