[project]
name = "ta-time-series-methods"
version = "0.1.0"
description = "Teaching Assistant Repository for CEMFI Advanced Training School - Methods for Time Series"
requires-python = ">=3.8"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "notebook>=6.0.0",
    "stata_kernel>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "yfinance>=0.2.66",
]
